# nexus-hal-interface

./: .gitignore  CMakeLists.txt  README.md  build-docs.sh  west.yml
.github/workflows/: documentation.yml
docs-utils/: DOCUMENTATION.md  Doxyfile  build-docs.sh  get-version.sh
include/: hal_common.h  hal_i2c.h  hal_i2c_master.h  hal_i2c_master_async.h  hal_i2c_transfer.h  hal_i2c_types.h  hal_macro_helpers.h  hal_pin.h  hal_pin_types.h  hal_spi_daisy_chain.h  hal_spi_master.h  hal_spi_master_async.h  hal_spi_types.h  hal_uart_async.h  hal_uart_basic.h  hal_uart_buffered.h  hal_uart_types.h  nhal_common.h  nhal_i2c_master.h  nhal_i2c_master_async.h  nhal_i2c_transfer.h  nhal_i2c_types.h  nhal_pin.h  nhal_pin_types.h  nhal_spi_daisy_chain.h  nhal_spi_master.h  nhal_spi_master_async.h  nhal_spi_types.h  nhal_uart.h  nhal_uart_async.h  nhal_uart_basic.h  nhal_uart_types.h  nhal_wdt.h  nhal_wdt_types.h
scripts/: west-commands.yml
scripts/nexus_commands/: __init__.py  build.py  clean.py  flash.py  list_projects.py  project_detector.py  runners.py
testing/gtest_mocks/: CMakeLists.txt
testing/gtest_mocks/include/: nhal_common_mock.hpp  nhal_i2c_mock.hpp  nhal_pin_mock.hpp  nhal_spi_mock.hpp  nhal_uart_mock.hpp  nhal_wdt_mock.hpp
testing/gtest_mocks/src/: nhal_common_mock.cpp  nhal_i2c_mock.cpp  nhal_pin_mock.cpp  nhal_spi_mock.cpp  nhal_uart_mock.cpp  nhal_wdt_mock.cpp
